# digital_filters

./: CLAUDE.md  CMakeLists.txt  README.md
include/: biquad_filter.h  butter_filter.h  cheby_filter.h  filter_utils.h  sos_filter.h  static_butter_filter.h  static_cheby_filter.h
src/: biquad_filter.c  butter_filter.c  cheby_filter.c  filter_utils.c  sos_filter.c  static_butter_filter.c  static_cheby_filter.c
test/: CMakeLists.txt  test_biquad.c  test_butter.c  test_butter_use_py.py  test_butter_with_py.c  test_cheby.c  test_cheby_use_py.py  test_cheby_with_py.c  test_sos.c  test_static_butter.c  test_static_cheby.c  verify_zpk_gain.py
